# nebari-chat-pack

./: .env.example  .gitignore  .gitmodules  AGENTS.md  DESIGN.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  nginx.conf  pack-metadata.yaml  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  docker.yml  docs.yml  helm.yml  pr-cleanup.yml  pypi.yml  tag-cleanup.yml
backend/: pyproject.toml
backend/src/ravnar_nebari_chat/: __init__.py  _austin_permits.py  _authenticators.py  _utils.py  austin_permit_agent.py
backend/src/ravnar_nebari_chat/demo_agents/_tools/: visualization.py
dev-deps/hrafnar-config/: config.yml
dev-deps/mcp-config/: example.mcp.env  tools.yml
docs/: README.md  docusaurus.config.js  docusaurus.config.ts  mock-credentials.md  package-lock.json  package.json
docs/docs/: introduction.mdx
frontend/: biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: main.css  main.tsx  routeTree.gen.ts
helm/chat-plus-plus-chart/: Chart.yaml  values.yaml
helm/nebari-chat/: Chart.yaml  config.yaml  values.schema.json  values.yaml
helm/nebari-dev-chart/: Chart.yaml  values.yaml
public/: keycloak-config.json
src/: index.css  main.css  main.tsx  routeTree.gen.ts  variables.css
src/agno/: config.ts  index.ts  memory.ts  metrics.ts  session.ts
src/api/: abstractapi.ts  agent.ts  auth.ts  config.ts  createagentrun.ts  createsession.ts  deletememories.ts  deletesessions.ts  getagentsconfig.ts  getconfig.ts  getmemories.ts  getmetrics.ts  getsession.ts  getsessionruns.ts  index.ts  listsessions.ts  memories.ts  memory.ts  metrics.ts  pb.ts  session.ts  sessions.ts  threads.ts  types.ts
src/api_old/: api.ts  apiprovider.ts  auth.ts  createagentrun.ts  deletememories.ts  deletesessions.ts  getconfig.ts  getmemories.ts  getsession.ts  index.ts  listsessions.ts  pb.ts  tools.ts
src/auth/: index.ts
src/chat/: activitymessage.tsx  assistantmessage.tsx  auiprovider.tsx  breadcrumbs.tsx  chat.tsx  chatoutput.tsx  chatruntimeprovider.tsx  chatsidebar.tsx  contentrenderer.tsx  dashboard.tsx  eventslog.tsx  faultinjector.tsx  header.tsx  index.tsx  messagerenderer.tsx  messages.ts  reasoninglink.tsx  sensorstatus.tsx  sidebarreasoning.tsx  sidebartools.tsx  toolcallsrenderer.tsx  toolcountlink.tsx  toolsrenderer.tsx  tracks.tsx  usermessage.tsx
(+266 files in other folders)
