[project]
name = "ravnar-nebari-chat"
description = "ADDME"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "OpenTeams", email = "info@openteams.com" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "cryptography>=45.0.7",
    "httpx>=0.28.1",
    "openai>=2.35.1,<3",
    "pyjwt>=2.12.1,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "psycopg[binary,pool]>=3.2.9,<4",
    "ravnar[serve,pydantic-ai]==0.0.12",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/nebari-dev/nebari-chat-pack"

[dependency-groups]
lint = [
    "ravnar-nebari-chat",
    "mypy==1.17.*",
    "pre-commit>=4.2,<5",
]
test = []
docs = []
dev = [
    "hatch",
    "ravnar-nebari-chat",
    "uv-dynamic-versioning",
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[[tool.uv.cache-keys]]
file = "pyproject.toml"

[[tool.uv.cache-keys]]
git = { commit = true, tags = true }

[tool.hatch.build.targets.sdist]
include = [
  "/src",
]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
ignore_untracked = true

[tool.hatch.build.hooks.version]
path = "src/ravnar_nebari_chat/_version.py"
template = '''
__version__ = "{version}"
'''

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
pydocstyle = { convention = "google" }
select = [
    "E",
    "F",
    "I001",
    "B",
    "C4",
    "ISC",
    "RET",
    "SIM",
    "PTH",
    "D2",
    "UP",
    "ASYNC",
    "RUF",
]
ignore = [
    # Conflicts with ruff formatter
    "ISC001",
    # Ignore line too long, because due to ruff, the error can only occur for strings
    "E501",
    # cache has its purpose
    "B019",
    # built-in open() is well understood
    "PTH123",
    # mutually-exclusive with D211
    "D203",
    # mutually-exclusive with D212
    "D213",
]
